--- a/app/.streamlit/secrets.toml
+++ b/app/.streamlit/secrets.toml
@@ -1,4 +1,8 @@
-key = "AKIA3QOP2IULX2DSJRHI"
-secret = "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"
+# key = "AKIA3QOP2IULX2DSJRHI"
+# secret = "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"
+
+key = "AKIARLEWQTAHMYQHCQQ7"
+secret = "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"
+
 region = "ap-southeast-1"
 aggrid_license = "For_Trialing_ag-Grid_Only-Not_For_Real_Development_Or_Production_Projects-Valid_Until-24_December_2022_[v2]_MTY3MTg0MDAwMDAwMA==afa7b0ffa82adfefffa4452551df3bf4"
